added test reports

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ jobs:
       - python/load-cache
       - python/install-deps
       - python/save-cache
-      - run: mkdir test-reports
+      - run: 
+          command: mkdir test-reports
       - run:
           command: ./seff-array.py -h
           name: Test
